--- a/styles/style.css
+++ b/styles/style.css
@@ -59,6 +59,8 @@ header {
 main {
   display: flex;
   justify-content: center;
+  /* background-color: black; */
+  /* background-image: url("./images/forest.jpg"); */
 }
 
 nav {
@@ -93,11 +95,16 @@ a:hover {
 }
 
 .content {
-  background-color: yellow;
   border: 1px solid black;
   margin: 30px 0;
   text-align: center;
   padding-bottom: 30px;
+  border-radius: 20px;
+  backdrop-filter: grayscale(.5) blur(5px);
+
+  border-top: 2px solid rgba(225, 225, 225, 0.3);
+  border-left: 2px solid rgba(225, 225, 225, 0.1);
+  border-right: 1px solid rgba(225, 225, 225, 0.2);
 }
 
 h1 {
