--- a/styles/style.css
+++ b/styles/style.css
@@ -52,15 +52,16 @@ table {
 
 /* MAIN STYLES */
 header {
-  background-color: blue;
+  background-color: #797979;
   margin-top: -20px;
 }
 
 main {
   display: flex;
   justify-content: center;
-  /* background-color: black; */
-  /* background-image: url("./images/forest.jpg"); */
+  background-color: #C5C5C5;
+  min-height: 100vh;
+  font-family: 'Roboto', sans-serif;
 }
 
 nav {
@@ -77,7 +78,7 @@ nav > ul {
 }
 
 a {
-  background-color: yellow;
+  background-color: #E5E5E5;
   width: 100px;
   text-align: center;
   height: 50px;
@@ -99,12 +100,10 @@ a:hover {
   margin: 30px 0;
   text-align: center;
   padding-bottom: 30px;
+  margin-bottom: 70px;
   border-radius: 20px;
-  backdrop-filter: grayscale(.5) blur(5px);
 
-  border-top: 2px solid rgba(225, 225, 225, 0.3);
-  border-left: 2px solid rgba(225, 225, 225, 0.1);
-  border-right: 1px solid rgba(225, 225, 225, 0.2);
+  background-color: white;
 }
 
 .selected-tab {
@@ -114,7 +113,7 @@ a:hover {
 h1 {
   text-align: center;
   margin-top: 40px;
-  font-size: 3.0em;
+  font-size: 50px;
 }
 
 .pancake-img {
@@ -153,17 +152,20 @@ h2 {
 }
 
 footer {
-  background-color: orange;
+  background-color: #797979;
+  color: white;
   width: 100%;
   height: 40px;
   display: flex; 
   justify-content: center;
   align-items: center;
+  position: fixed;
+  bottom: 0;
 }
 
 .about, .hours {
   margin: auto;
-  border: 1px solid black;
+  border: 5px solid grey;
   padding: 10px;
   margin-top: 30px;
   display: flex;
@@ -173,13 +175,12 @@ footer {
 
 .menu-content div {
   margin: auto;
-  border: 1px solid black;
-  padding: 10px;
+  border: 5px solid grey;
+  padding-top: 10px;
   margin-top: 30px;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  border: 1px solid black;
 }
 
 .menu-content {
@@ -194,6 +195,18 @@ footer {
   font-size: 1.3em;
 }
 
+.contact-header {
+  margin-bottom: 20px;
+}
+
+.final-p-contact {
+  margin-bottom: 10px;
+}
+
+.gm-img {
+  margin-top: 50px;;
+}
+
 /* MOBILE STYLES */
 @media only screen and (max-width: 480px) {
   nav {
@@ -206,15 +219,23 @@ footer {
   }
 
   img {
-    width: 320px;
+    width: 300px;
   }
 
   .about, .hours {
-    width: 300px;
+    width: 260px;
   }
 
   .menu-content, div {
-    width: 300px;
+    width: 260px;
+  }
+
+  .menu-content div img {
+    width: 100%;
+  }
+
+  .content {
+    width: 400px;
   }
 }
 
@@ -229,11 +250,15 @@ footer {
   }
 
   .about, .hours {
-    width: 481px;
+    width: 440px;
   }
 
   .menu-content, div {
     width: 481px;
+  }
+
+  .content {
+    width: 581px;
   }
 }
 
